[package]
name = "ebpf-learn"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
ebpf-learn-common = { path = "../ebpf-learn-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11"
libc = "0.2"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "full", "mio"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[[bin]]
name = "ebpf-learn"
path = "src/main.rs"
